Fix overlapping features

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -177,12 +177,15 @@ a {
     width: 300px;
     height: 140px;
     padding: 25px;
+    display: block;
+    overflow: hidden;
 
     h2 {
       font-size: 1.1em;
       width: 100%;
       text-align: center;
     }
+
     .desc {
       margin-top: 15px;
       text-align: left;
